# fit_file_uploader

./: .config.example  .config.json.example  .env.example  .gitignore  LICENSE.md  README.md  app.py  garmin.py  pyproject.toml  requirements.txt
.github/workflows/: install.yml  publish_and_release.yml
