[project]
name = "fit-file-faker"
version = "1.0.0"
description = "A small tool to edit and upload FIT files to Garmin Connect"
authors = [
  { name="Josh Taillon", email="jat255@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fit-tool>=0.9.13",
    "garth>=0.5.2",
    "platformdirs>=4.3.6",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "semver>=3.0.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]

[project.urls]
Homepage = "https://github.com/jat255/Fit-File-Faker"
Issues = "https://github.com/jat255/Fit-File-Faker/issues"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
fit-file-faker = "app:run"

[tool.uv]
package = true
